--- a/gui/views/about.html
+++ b/gui/views/about.html
@@ -19,7 +19,7 @@
 				<img class="logo" src="../resources/images/LOGO2.png" />
 			</div>
 			<div>Copyright © 2019-2020</div>
-			<div>Carlos Gabriel (@cgabriel5)</div>
+			<div>Carlos A. Gabriel</div>
 			<div>v0.0.1</div>
 		</div>
 	</body>
