--- a/gui/css/components/sidebar.css
+++ b/gui/css/components/sidebar.css
@@ -1,41 +1,59 @@
 .sidebar {
 	background: #fbfafc;
+	/*background: #f7f6f8;*/
 	min-width: 325px;
 	height: 100%;
 	border-right: 2px solid #ececec;
-	padding-top: 10px;
+	/*padding-top: 10px;*/
 	overflow: auto;
+	/*color: rgb(95, 95, 95);*/
 }
 
 .sb-row {
 	display: flex;
 	flex-flow: row nowrap;
 	color: #333333;
-	font-weight: bold;
+	/*justify-content: start;*/
+	justify-content: space-between;
+	align-items: center;
+	/*color: rgb(65, 65, 65);*/
+	/*font-weight: bold;*/
 	padding: 7px 7px 7px 15px;
 }
 
-.sb-row:hover {
-	background: rgba(0, 0, 0, 0.035);
+/*.sb-row:hover {
+	background: rgba(0, 0, 0, 0.05);
+}
+*/
+.sb-row-selected {
+	/*background: #327dff !important;*/
+	background: rgba(0, 0, 0, 0.05) !important;
+	/*color: #ffffff;*/
 }
 
 .sb-row-icon-cont {
 	display: block;
-	margin-right: 10px;
+	margin-right: 5px;
+	width: 30px;
+}
+
+.sb-row-icon-cont i {
+	font-weight: bold;
+	font-size: 24px;
 }
 
 .entry-item {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-between;
-	padding: 5px 0 5px 40px;
+	padding: 5px 0 5px 52px;
 	width: 100%;
 }
 
-.entry-item:hover {
+/*.entry-item:hover {
 	background: rgba(0, 0, 0, 0.035);
 }
-
+*/
 .item-active {
 	background: #327dff;
 	color: #ffffff;
@@ -54,14 +72,14 @@
 }
 
 .entry-count {
-	padding: 2px 10px;
+	padding: 2px 12px;
 	border-radius: 20px;
-	background: #327dff;
+	/*background: #327dff;*/
 	background: #a9b8d3;
 	color: white;
 	font-weight: bold;
-	font-size: 17px;
 	margin-right: 15px;
+	transform: scale(0.85);
 }
 
 /* Sidebar icon CSS arrows */
