--- a/gui/css/overrides.css
+++ b/gui/css/overrides.css
@@ -1,6 +1,8 @@
 body {
 	font-size: 20px;
-	font-family: Roboto, -apple-system, "SFNS Display";
+	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
+		Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+	zoom: 200%;
 }
 
 /* [https://stackoverflow.com/a/26866503] */
