--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -10,9 +10,27 @@
 			content="width=device-width,initial-scale=1,shrink-to-fit=no"
 		/>
 		<link href="../css/main.css" rel="stylesheet" />
+		<!-- 		<link
+			href="../resources/fonts/fontawesome-pro-5.14.0-web/css/all.css"
+			rel="stylesheet"
+		/> -->
+
+		<!-- 		<link
+			href="../resources/fonts/google-webfonts/css/all.css"
+			rel="stylesheet"
+		/>
+ -->
+		<!-- 		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Hind:wght@300;400;600&family=Roboto:wght@700&family=Roboto+Mono:wght@700&display=swap"
+			rel="stylesheet"
+			async=""
+			defer=""
+		/> -->
+
 		<script src="../js/libs/interaction.js"></script>
 		<script src="../js/libs/funnel.js"></script>
-		<script src="../js/app.js"></script>
+		<!-- <script src="../js/libs/monitor.js"></script> -->
+		<script async defer src="../js/app.js"></script>
 	</head>
 
 	<body class="noselect">
@@ -20,7 +38,13 @@
 			<div class="status">
 				<div class="left">
 					<div><span class="bold">nodecliac</span> v0.0.1</div>
-					<div class="button-light update-btn">Update nodecliac</div>
+					<div class="button-light update-btn">
+						<span class="update-btn-icon">
+							<i class="fas fa-sync-alt"></i>
+							<!-- <img src="../resources/images/fontawesome/sync.svg"/> -->
+						</span>
+						Update nodecliac
+					</div>
 				</div>
 				<div class="right">
 					<div>
@@ -30,7 +54,8 @@
 								target="_blank"
 								onclick="api.open(this.href)"
 								href="https://github.com/cgabriel5/nodecliac"
-								>GitHub</a
+								><span><i class="fab fa-github"></i></span>
+								GitHub</a
 							></span
 						>
 					</div>
@@ -39,11 +64,18 @@
 
 			<div id="main" class="main">
 				<div id="sidebar" class="sidebar">
-					<div class="sb-row">
-						<div class="sb-row-icon-cont">
-							<div class="sb-row-icon arrow-down"></div>
+					<div class="sb-row" data-row="packages">
+						<div class="left">
+							<div class="center">
+								<div class="sb-row-icon-cont">
+									<!-- <div class="sb-row-icon arrow-down"></div> -->
+									<i class="fas fa-database"></i>
+								</div>
+								<div class="sb-label">Registry</div>
+							</div>
 						</div>
-						<div class="sb-label">Packages</div>
+
+						<div class="right"><div class="left"></div></div>
 					</div>
 
 					<div class="entries">
@@ -76,33 +108,237 @@
 						</div>
 					</div>
 
-					<div class="sb-row">
-						<div class="sb-row-icon-cont">
-							<div class="sb-row-icon arrow-right"></div>
+					<div class="sb-row" data-row="settings">
+						<div class="left">
+							<div class="center">
+								<div class="sb-row-icon-cont">
+									<i class="fas fa-sliders-h"></i>
+									<!-- <div class="sb-row-icon arrow-right"></div> -->
+								</div>
+								<div class="sb-label">Settings</div>
+							</div>
 						</div>
-						<div class="sb-label">Settings</div>
+						<div class="right"></div>
 					</div>
 
-					<div class="sb-row" id="about" onclick="api.about()">
-						<div class="sb-row-icon-cont noselect opa0">
-							<div class="sb-row-icon arrow-right"></div>
+					<div class="sb-row" data-row="about" id="about">
+						<div class="left">
+							<div class="center">
+								<div class="sb-row-icon-cont">
+									<i class="fas fa-info-circle"></i>
+									<!-- <div class="sb-row-icon arrow-right"></div> -->
+								</div>
+								<div class="sb-label">About</div>
+							</div>
 						</div>
-						<div class="sb-label">About</div>
+						<div class="right"></div>
 					</div>
 				</div>
 
 				<div id="content" class="content">
+					<div id="settings-cont" class="settings-cont none">
+						<div class="setting-entry">
+							<div class="left">
+								<div class="setting-label">
+									Enable nodecliac
+								</div>
+							</div>
+							<div class="right">
+								<div>
+									<input
+										type="checkbox"
+										id="switch-status"
+										class="checkbox"
+									/>
+									<label
+										for="switch-status"
+										class="switch"
+									></label>
+								</div>
+							</div>
+						</div>
+
+						<div class="setting-entry">
+							<div class="left">
+								<div class="setting-label">Cache</div>
+							</div>
+							<div class="right">
+								<div class="setting-action-btns-cont">
+									<div
+										class="setting-action-btn cache-clear-btn left"
+									>
+										clear
+									</div>
+
+									<div class="settings-divider"></div>
+
+									<div
+										id="setting-action-btn-dynamic"
+										class="setting-action-btn setting-action-btn-left setting-action-btn setting-action-btn-unselected"
+									>
+										<div class="btn-setting-icon none">
+											<i class="fas fa-check"></i>
+										</div>
+										dynamic
+									</div>
+									<div
+										id="setting-action-btn-all"
+										class="setting-action-btn setting-action-btn-right setting-action-btn-unselected"
+									>
+										<div class="btn-setting-icon none">
+											<i class="fas fa-check"></i>
+										</div>
+										all
+									</div>
+								</div>
+								<div class="left">
+									<input
+										type="checkbox"
+										id="switch-cache"
+										class="checkbox"
+									/>
+									<label
+										for="switch-cache"
+										class="switch"
+									></label>
+								</div>
+							</div>
+						</div>
+
+						<div class="setting-entry">
+							<div class="left">
+								<div class="setting-label">Debug</div>
+							</div>
+							<div class="right">
+								<div class="setting-action-btns-cont">
+									<div
+										id="setting-action-btn-nim"
+										class="setting-action-btn setting-action-btn-left setting-action-btn-unselected"
+									>
+										<div class="btn-setting-icon none">
+											<i class="fas fa-check"></i>
+										</div>
+										nim
+									</div>
+									<div
+										id="setting-action-btn-perl"
+										class="setting-action-btn setting-action-btn-right setting-action-btn setting-action-btn-unselected"
+									>
+										<div class="btn-setting-icon none">
+											<i class="fas fa-check"></i>
+										</div>
+										perl
+									</div>
+								</div>
+								<div class="left">
+									<input
+										type="checkbox"
+										id="switch-debug"
+										class="checkbox"
+									/>
+									<label
+										for="switch-debug"
+										class="switch"
+									></label>
+								</div>
+							</div>
+						</div>
+
+						<div class="setting-entry">
+							<div class="left">
+								<div class="setting-label">
+									Complete Single Hyphen Flags
+								</div>
+							</div>
+							<div class="right">
+								<div>
+									<div>
+										<input
+											type="checkbox"
+											id="switch-single-flag-comp"
+											class="checkbox"
+										/>
+										<label
+											for="switch-single-flag-comp"
+											class="switch"
+										></label>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
 					<div id="packages-cont" class="packages-cont">
 						<div id="pkg-list" class="pkg-list">
 							<div>
 								<div class="pkg-list-header-cont">
 									<div class="left">
-										<div class="pkg-list-header-label">
-											Name
+										<div class="center">
+											<div
+												id="select-all-toggle"
+												class="pkg-entry-icon"
+											>
+												<i class="fas fa-square"></i>
+											</div>
+
+											<div class="pkg-list-header-label">
+												Package
+											</div>
+										</div>
+
+										<div
+											id="pkg-list-header-actions"
+											class="pkg-list-header-actions pkg-list-header-actions-disabled"
+										>
+											<div
+												class="pkg-list-header-action pkg-list-header-action-left"
+											>
+												<span
+													class="pkg-list-header-action-icon pkg-list-header-action-left"
+												>
+													<i
+														class="fas fa-sync-alt"
+													></i>
+												</span>
+											</div>
+											<div
+												class="pkg-list-header-action pkg-list-header-action-middle"
+											>
+												<span
+													class="pkg-list-header-action-icon"
+												>
+													<i class="fas fa-trash"></i>
+												</span>
+											</div>
+											<div
+												class="pkg-list-header-action pkg-list-header-action-middle-2"
+											>
+												<span
+													class="pkg-list-header-action-icon"
+												>
+													<i
+														class="fas fa-toggle-on"
+													></i>
+												</span>
+											</div>
+											<div
+												class="pkg-list-header-action pkg-list-header-action-right"
+											>
+												<span
+													class="pkg-list-header-action-icon"
+												>
+													<i
+														class="fas fa-toggle-off"
+													></i>
+												</span>
+											</div>
 										</div>
 									</div>
 									<div class="right">
 										<div class="pkg-header-input-cont">
+											<div class="pkg-header-search">
+												<i class="fas fa-search"></i>
+											</div>
 											<input
 												id="pkg-header-input"
 												class="pkg-header-input"
@@ -124,27 +360,73 @@
 									Completion Package Information
 								</div>
 							</div>
-							<div class="pkg-info-row">
+							<div id="pkg-info-row-name" class="pkg-info-row">
 								<div class="pkg-info-label">Name:</div>
-								<div class="pkg-info-value">--</div>
+								<div class="pkg-info-value"></div>
 							</div>
-							<div class="pkg-info-row">
+							<div
+								id="pkg-info-row-description"
+								class="pkg-info-row"
+							>
 								<div class="pkg-info-label">Description:</div>
-								<div class="pkg-info-value">--</div>
+								<div class="pkg-info-value"></div>
 							</div>
-							<div class="pkg-info-row">
+							<div id="pkg-info-row-author" class="pkg-info-row">
 								<div class="pkg-info-label">Author:</div>
-								<div class="pkg-info-value">--</div>
+								<div class="pkg-info-value"></div>
 							</div>
-							<div class="pkg-info-row">
+							<div
+								id="pkg-info-row-repository"
+								class="pkg-info-row"
+							>
 								<div class="pkg-info-label">Repository:</div>
-								<div class="pkg-info-value">--</div>
+								<div class="pkg-info-value"></div>
 							</div>
-							<div class="pkg-info-row">
+							<div
+								id="pkg-info-row-location"
+								class="pkg-info-row"
+							>
+								<div class="pkg-info-label">Location:</div>
+								<div class="pkg-info-value"></div>
+							</div>
+							<div id="pkg-info-row-version" class="pkg-info-row">
 								<div class="pkg-info-label">Version:</div>
-								<div class="pkg-info-value">--</div>
+								<div class="pkg-info-value"></div>
+							</div>
+							<div id="pkg-info-row-license" class="pkg-info-row">
+								<div class="pkg-info-label">License:</div>
+								<div class="pkg-info-value"></div>
 							</div>
 						</div>
+					</div>
+
+					<div id="about-cont" class="about-cont none">
+						<div class="about-logo-cont none">
+							<img
+								class="about-logo"
+								src="../resources/images/LOGO2.png"
+							/>
+						</div>
+
+						<div class="logo-wrapper">
+							<div class="logo-top-face-cont">
+								<div class="logo-top-face">
+									<div class="logo-top-face-text">
+										$<span class="blink-caret">_</span>
+									</div>
+								</div>
+							</div>
+							<div class="logo-left-face"></div>
+							<div class="logo-right-face">
+								<div class="logo-right-face-text">
+									tab
+								</div>
+							</div>
+						</div>
+
+						<div class="about-title">nodecliac</div>
+						<div>Copyright © 2019-2020</div>
+						<div>Carlos A. Gabriel</div>
 					</div>
 				</div>
 			</div>
