On gui: gui working: settings panel checkpoint 3
- Added start splash animation.

--- a/gui/css/classes.css
+++ b/gui/css/classes.css
@@ -41,6 +41,10 @@
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
+.nointer {
+	pointer-events: none;
+}
+
 .link {
 	color: #0366d6;
 	text-decoration: none;
@@ -61,4 +65,8 @@
 
 .opa0 {
 	opacity: 0;
+}
+
+.opa1 {
+	opacity: 1;
 }
