--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -34,7 +34,48 @@
 	</head>
 
 	<body class="noselect">
+		<div id="splash-overlay" class="splash-overlay opa1">
+			<div class="splash">
+				<div class="icon">
+					<div id="leaf" class="leaf"></div>
+				</div>
+			</div>
+		</div>
+
 		<div id="app" class="app">
+			<div id="loader" class="loader none">
+				<div class="loader-cont">
+					<!-- <i class="fas fa-spinner-third fa-spin"></i> -->
+					<!-- [https://loading.io/css/] -->
+					<!--
+<div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+ -->
+
+					<!-- [https://webdesign.tutsplus.com/tutorials/how-to-create-a-loader-icon-with-svg-animations--cms-31542] -->
+					<!-- [https://codepen.io/tutsplus/pen/mjOJma] -->
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						width="50"
+						height="50"
+						viewBox="0 0 50 50"
+					>
+						<path
+							fill="#ffffff"
+							d="M25,5A20.14,20.14,0,0,1,45,22.88a2.51,2.51,0,0,0,2.49,2.26h0A2.52,2.52,0,0,0,50,22.33a25.14,25.14,0,0,0-50,0,2.52,2.52,0,0,0,2.5,2.81h0A2.51,2.51,0,0,0,5,22.88,20.14,20.14,0,0,1,25,5Z"
+						>
+							<animateTransform
+								attributeName="transform"
+								type="rotate"
+								from="0 25 25"
+								to="360 25 25"
+								dur="0.65s"
+								repeatCount="indefinite"
+							/>
+						</path>
+					</svg>
+				</div>
+			</div>
+
 			<div class="status">
 				<div class="left">
 					<div><span class="bold">nodecliac</span> v0.0.1</div>
@@ -165,6 +206,7 @@
 							<div class="right">
 								<div class="setting-action-btns-cont">
 									<div
+										id="setting-action-btn-clear-cache"
 										class="setting-action-btn cache-clear-btn left"
 									>
 										clear
