--- a/gui/css/overrides.css
+++ b/gui/css/overrides.css
@@ -2,12 +2,17 @@ body {
 	font-size: 20px;
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
 		Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-	zoom: 200%;
+	zoom: 100%;
 }
 
 /* [https://stackoverflow.com/a/26866503] */
 .macosx-zoom {
 	zoom: 65%;
+}
+
+.fa-spin {
+	-webkit-animation: fa-spin 0.6s linear infinite;
+	animation: fa-spin 0.6s linear infinite;
 }
 
 /* Selection overrides. */
