update: Add update/doctor panels

--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -10,6 +10,7 @@
 @import "../css/components/statusbar.css";
 @import "../css/components/settings.css";
 @import "../css/components/about.css";
+@import "../css/components/update.css";
 @import "../css/classes.css";
 @import "../css/interfaces.css";
 
