--- a/gui/views/index.html
+++ b/gui/views/index.html
@@ -174,6 +174,32 @@
 						</div>
 						<div class="right"></div>
 					</div>
+
+					<div class="sb-row" data-row="update" id="update">
+						<div class="left">
+							<div class="center">
+								<div class="sb-row-icon-cont">
+									<i class="fas fa-sync-alt"></i>
+									<!-- <div class="sb-row-icon arrow-right"></div> -->
+								</div>
+								<div class="sb-label">Update</div>
+							</div>
+						</div>
+						<div class="right"></div>
+					</div>
+
+					<div class="sb-row" data-row="doctor" id="doctor">
+						<div class="left">
+							<div class="center">
+								<div class="sb-row-icon-cont">
+									<i class="fas fa-briefcase-medical"></i>
+									<!-- <div class="sb-row-icon arrow-right"></div> -->
+								</div>
+								<div class="sb-label">Doctor</div>
+							</div>
+						</div>
+						<div class="right"></div>
+					</div>
 				</div>
 
 				<div id="content" class="content">
@@ -469,6 +495,36 @@
 						<div class="about-title">nodecliac</div>
 						<div>Copyright © 2019-2020</div>
 						<div>Carlos A. Gabriel</div>
+					</div>
+
+					<div id="update-cont" class="update-cont none">
+						<div class="top-cont">
+							<div class="left"></div>
+							<div class="right">
+								<div class="btn-update">clear log</div>
+								<div class="btn-update-b">update</div>
+							</div>
+						</div>
+						<div class="bottom-cont">
+							<div id="update-output" class="update-output">
+								nodecliac update --installer=nim...
+							</div>
+						</div>
+					</div>
+
+					<div id="doctor-cont" class="update-cont none">
+						<div class="top-cont">
+							<div class="left"></div>
+							<div class="right">
+								<div class="btn-update">clear log</div>
+								<div class="btn-update-b">run</div>
+							</div>
+						</div>
+						<div class="bottom-cont">
+							<div id="doctor-output" class="update-output">
+								Doctor results:
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
